# barracks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  toolchain-aarch64.cmake  toolchain-android.cmake  toolchain-native.cmake
clay/inc/: clay.h  serializeClay.h  serializeHash.h
clay/src/: clay.cpp
common/: mydebug.h  mystring.h  mytypes.h
gtest/include/gtest/: gtest.h
gtest/src/: gtest.cc  gtest_main.cc
hash/: hash  hash.h  main.cpp  serialize.h  strcommon.h
list/: list.h
net/inc/: myepoll.h
net/src/: myepoll.cpp
structure/: hash.h  list.h  queue.h  stack.h  table.h  ternary.h  ternarylist.h
